src/test/deca/context/invalid/objets/Heredite2.deca
class A {
   int x = 1;
}

class B {
    int y = 2;

}


{
  A a = new A();

  B b = (B)(a);

  print(b.x);

}
